<resources>
    <string name="app_name">IOTA Wallet</string>
    <string name="app_settings">IOTA</string>
    <string name="app_issue_reporter">Issue Reporter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="all_transactions">All transactions:</string>
    <string name="invalid_transactions">Invalid transactions:</string>
    <string name="new_transactions">New transactions:</string>
    <string name="random_transaction_requests">Random transaction requests:</string>
    <string name="sent_transactions">Sent transactions:</string>
    <string name="connection_type">Connection type:</string>
    <string name="na">N/A</string>
    <string name="seed">Seed:</string>
    <string name="password">Password:</string>
    <string name="current_password">Current password:</string>
    <string name="new_password">New password:</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="copy_seed">Copy Seed?</string>
    <string name="generate_seed">Generate Seed</string>
    <string name="transactions_to_request">Transactions to request</string>
    <string name="tips">Tips</string>
    <string name="transactions">Transactions</string>
    <string name="transfer">Transfer</string>
    <string name="transfers">Transfers</string>
    <string name="addresses">Addresses</string>
    <string name="search">Search</string>
    <string name="account_balance">Account Balance:</string>
    <string name="account_balance_default">0 i</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="address">Address</string>
    <string name="hash">Hash</string>
    <string name="amount">Amount</string>
    <string name="message_optional">Message (optional, A-Z and 9 only)</string>
    <string name="tag_optional">Tag (optional, A-Z and 9 only)</string>
    <string name="neighbor_ip">Neighbor IP:</string>
    <string name="buttons_ok">OK</string>
    <string name="buttons_cancel">Cancel</string>
    <string name="buttons_login">Login</string>
    <string name="buttons_save">Save</string>
    <string name="buttons_show">Show</string>
    <string name="buttons_again">Never ask again</string>
    <string name="buttons_share">Share</string>
    <string name="buttons_backup">Backup</string>
    <string name="messages_shortcuts_not_available">Please login first.</string>
    <string name="messages_invalid_search">Please enter a valid bundle, tag, address, approvees or transaction.</string>
    <string name="messages_enter_neighbor_address">You have to enter a valid ip legacy Address to continue</string>
    <string name="messages_neighbor_address_forgiven">Ip-Address already added.</string>
    <string name="messages_network_remote_error">Network error, could not connect to the remote node.</string>
    <string name="messages_network_access_error">Unauthorized, the command is not available on this node.</string>
    <string name="messages_network_iota_cool_error">Network error, could not connect to iota.cool network.</string>
    <string name="messages_network_error">Network error, could not connect network.</string>
    <string name="messages_invalid_hash_error">Invalid hash error, could not found transaction.</string>
    <string name="messages_exchange_rate_error">No exchange rate data available.</string>
    <string name="messages_no_chart_data">No chart data available.</string>
    <string name="messages_copy_seed">Keep it secure and don\'t share it with anyone. If someone has access to your seed they can access your account. You want copy to clipboard?</string>
    <string name="messages_store_seed">Store seed?</string>
    <string name="messages_empty_seed">Please enter a valid seed.</string>
    <string name="messages_seed_to_short">Your seed is also too short.</string>
    <string name="messages_seed_to_long">Your seed is also too long.</string>
    <string name="messages_mixed_seed">Your seed contains mixed case characters. Lowercase is converted to uppercase.</string>
    <string name="messages_invalid_characters_seed">Your seed contains invalid characters. Only uppercase characters from A-Z and the number 9 are accepted.</string>
    <string name="messages_to_long_seed">Your seed should not contain more than 81 characters. Extra characters are ignored.</string>
    <string name="messages_to_short_seed">Your seed does not contain enough characters. This is not secure.</string>
    <string name="messages_not_fully_synced_yet">The connected node is not fully synced yet</string>
    <string name="messages_no_data_available">No data available</string>
    <string name="messages_not_yet_implemented">Not yet implemented</string>
    <string name="messages_enter_txaddress_with_checksum">Please enter a valid recipient address with checksum</string>
    <string name="messages_enter_amount">Please enter a amount</string>
    <string name="messages_not_enough_balance">Not enough credit</string>
    <string name="messages_invalid_characters">Only uppercase characters from A-Z and the number 9 are accepted.</string>
    <string name="messages_tag_to_long">Please enter a valid tag. Maximum 27 trytes allowed.</string>
    <string name="messages_trx_not_found">Bundle or address not found</string>
    <string name="messages_bundle_not_found">Bundle not found</string>
    <string name="messages_permission_camera">Reading QR code required camera permission. Allow it, to read QR codes.</string>
    <string name="messages_invalid_password">Invalid password</string>
    <string name="messages_match_password">Password not match</string>
    <string name="messages_empty_password">Password is empty</string>
    <string name="message_open_licenses_error">Can\'t open WebView.</string>
    <string name="message_install_web_view">Install WebView</string>
    <string name="messages_iota_donation_require_login">Please first login with your seed</string>
    <string name="messages_address_used">The address is already used. Please generate a new one or choose a non-used address.</string>
    <string name="messages_transaction_already_confirmed">The transaction is already confirmed.</string>
    <string name="menu_group_misc">Misc</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_tangle_explorer">Tangle Explorer</string>
    <string name="menu_neighbors">Neighbors</string>
    <string name="menu_node_info">Node Info</string>
    <string name="menu_settings">@string/action_settings</string>
    <string name="menu_about">About the app</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_search">Search</string>
    <string name="notification_send_transfer_request_title">Sending transfer</string>
    <string name="notification_generate_new_address_request_title">Generating new address</string>
    <string name="notification_attaching_new_address_request_title">Attaching new address</string>
    <string name="notification_replay_bundle_request_title">Reattaching</string>
    <string name="notification_generating_new_address_response_succeeded_title">New address generated</string>
    <string name="notification_send_transfer_response_succeeded_title">Transaction executed</string>
    <string name="notification_send_transfer_response_failed_title">Transaction failed</string>
    <string name="notification_attaching_new_address_response_succeeded_title">Attaching new address executed</string>
    <string name="notification_attaching_new_address_response_failed_title">Attaching new address failed</string>
    <string name="notification_replay_bundle_response_succeeded_title">Reattach executed</string>
    <string name="notification_replay_bundle_response_failed_title">Reattach failed</string>
    <string name="notification_address_attach_to_tangle_blocked_title">Attaching new address failed, please enable local PoW</string>
    <string name="notification_transfer_attach_to_tangle_blocked_title">Transaction failed, please enable local PoW</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_version_unknown">Version unknown</string>
    <string name="about_changelog">Changelog</string>
    <string name="about_licenses">Licenses</string>
    <string name="about_support">Support us</string>
    <string name="about_buildchain">Build chain</string>
    <string name="about_faq">FAQ</string>
    <string name="about_donation_website">Visit our website</string>
    <string name="about_buildchain_github">Show last commit at Github</string>
    <string name="about_donation_btc">BTC donation</string>
    <string name="about_buildchain_travis">Show build at Travis CI</string>
    <string name="about_donation_iota">IOTA donation</string>
    <string name="about_iota_support">Visit Iotasupport.com</string>
    <string name="settings_header_node_title">Node</string>
    <string name="settings_header_node_summary">Node settings</string>
    <string name="settings_node_protocol_title">Node protocol</string>
    <string name="settings_node_protocol_summary">The protocol of the (hopefully trusty) node you would like connect to</string>
    <string name="settings_node_ip_title">Node IP</string>
    <string name="settings_node_ip_summary">The IP address of the (hopefully trusty) node you would like connect to</string>
    <string name="settings_node_port_title">Node port</string>
    <string name="settings_node_port_summary">The port of the (hopefully trusty) node you would like connect to</string>
    <string name="settings_password_protection_title">Password</string>
    <string name="settings_password_protection_summary">Seed and password settings</string>
    <string name="settings_show_seed_title">Show seed</string>
    <string name="settings_show_seed_summary">Display current seed</string>
    <string name="settings_change_password_title">Change Password</string>
    <string name="settings_change_password_summary">Change current password</string>
    <string name="settings_encrypt_seed_title">Protect seed</string>
    <string name="settings_encrypt_seed_summary">Set-up password protection</string>
    <string name="settings_header_misc_title">Misc</string>
    <string name="settings_header_misc_summary">Bug report, currency, PoW</string>
    <string name="settings_local_pow_title">Local PoW</string>
    <string name="settings_local_pow_summary">Doing the Proof of work locally</string>
    <string name="settings_issue_reporter_title">Report issue</string>
    <string name="settings_issue_reporter_summary">Report issue or submit feedback</string>
    <string name="settings_wallet_currency_title">Currency</string>
    <string name="settings_wallet_currency_summary">The currency in which the wallet value is displayed</string>
    <string name="settings_messages_empty_node_protocol">Empty node protocol not allowed.</string>
    <string name="settings_messages_wrong_node_protocol">Node protocol not allowed.</string>
    <string name="settings_messages_empty_node_ip">Empty node IP not allowed.</string>
    <string name="settings_messages_empty_node_port">Empty node port not allowed.</string>
    <string name="info_app_name">App name:</string>
    <string name="info_app_version">App version:</string>
    <string name="info_jre_version">JRE version:</string>
    <string name="info_max_processors">Available processors:</string>
    <string name="info_free_memory">JRE free memory:</string>
    <string name="info_max_memory">JRE max memory:</string>
    <string name="info_total_memory">JRE total memory:</string>
    <string name="info_latest_milestone">Latest milestone:</string>
    <string name="info_latest_milestone_index">Latest milestone index:</string>
    <string name="fragment_login_title">Login</string>
</resources>