<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="preference_local_pow"
        android:summary="@string/settings_local_pow_summary"
        android:title="@string/settings_local_pow_title" />

    <Preference
        android:key="preference_issue_reporter"
        android:summary="@string/settings_issue_reporter_summary"
        android:title="@string/settings_issue_reporter_title" />

    <ListPreference
        android:defaultValue="BTC"
        android:entries="@array/listCurrencies"
        android:entryValues="@array/listValues"
        android:key="preference_wallet_currency"
        android:summary="@string/settings_wallet_currency_summary"
        android:title="@string/settings_wallet_currency_title" />

</PreferenceScreen>
