<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/menu_wallet"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_tangle_explorer"
            android:icon="@drawable/menu_list"
            android:title="@string/menu_tangle_explorer" />
        <item
            android:id="@+id/nav_node_info"
            android:icon="@drawable/menu_node_info"
            android:title="@string/menu_node_info" />

        <item
            android:id="@+id/nav_neighbors"
            android:icon="@drawable/menu_neighbors"
            android:title="@string/menu_neighbors" />

        <item android:title="@string/menu_group_misc">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_about"
                        android:icon="@drawable/menu_about"
                        android:title="@string/menu_about" />
                    <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/menu_settings"
                        android:title="@string/menu_settings" />
                    <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/menu_logout"
                        android:title="@string/menu_logout"
                        android:visible="false" />
                </group>
            </menu>
        </item>

    </group>
</menu>
