<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@null"
            android:drawablePadding="@dimen/baseline"
            android:drawableStart="@mipmap/ic_launcher"
            android:gravity="center_vertical"
            android:padding="@dimen/baseline"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@null"
            android:drawablePadding="@dimen/about_item_drawable_padding"
            android:drawableStart="@drawable/ic_version"
            android:gravity="center_vertical"
            android:padding="@dimen/baseline"
            android:text="@string/about_version_unknown"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:id="@+id/about_changelog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:drawableEnd="@null"
            android:drawablePadding="@dimen/about_item_drawable_padding"
            android:drawableStart="@drawable/ic_changelog"
            android:gravity="center_vertical"
            android:padding="@dimen/baseline"
            android:text="@string/about_changelog"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:id="@+id/about_licenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:drawableEnd="@null"
            android:drawablePadding="@dimen/about_item_drawable_padding"
            android:drawableStart="@drawable/ic_licenses"
            android:gravity="center_vertical"
            android:padding="@dimen/baseline"
            android:text="@string/about_licenses"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    </LinearLayout>
</android.support.v7.widget.CardView>